dark-pods-and-services.yaml
apiVersion: v1
kind: Pod
metadata:
   name: kubecon-minilab-app
   labels:
     app: kubecon-minilab-app
spec:
  containers:
  - name: kubecon-demo-app
    image: harbor.humblelab.com/library/kubecon-demo-app-dark
---
apiVersion: v1
kind: Pod
metadata:
   name: kubecon-minilab-ll
   labels:
     app: kubecon-minilab-ll
spec:
  containers:
  - name: kubecon-demo-ll
    image: harbor.humblelab.com/library/kubecon-demo-ll-dark
---
apiVersion: v1
kind: Pod
metadata:
   name: kubecon-minilab-kc
   labels:
     app: kubecon-minilab-kc
spec:
  containers:
  - name: kubecon-demo-kc
    image: harbor.humblelab.com/library/kubecon-demo-kc-dark
---
apiVersion: v1
kind: Pod
metadata:
   name: kubecon-minilab-brm
   labels:
     app: kubecon-minilab-brm
spec:
  containers:
  - name: kubecon-demo-brm
    image: harbor.humblelab.com/library/kubecon-demo-brm-dark
---
apiVersion: v1
kind: Service
metadata:
  name:  kubecon-minilab-app-svc
  labels:
    app: kubecon-minilab-app-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: kubecon-minilab-app
---
apiVersion: v1
kind: Service
metadata:
  name:  kubecon-minilab-ll-svc
  labels:
    app: kubecon-minilab-ll-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: kubecon-minilab-ll
---
apiVersion: v1
kind: Service
metadata:
  name:  kubecon-minilab-kc-svc
  labels:
    app: kubecon-minilab-kc-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: kubecon-minilab-kc
---
apiVersion: v1
kind: Service
metadata:
  name:  kubecon-minilab-brm-svc
  labels:
    app: kubecon-minilab-brm-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: kubecon-minilab-brm
