main-app-dark-pod-and-service.yaml
apiVersion: v1
kind: Pod
metadata:
   name: kubecon-minilab-app-dark
   labels:
     app: kubecon-minilab-app-dark
spec:
  containers:
  - name: kubecon-demo-app
    image: harbor.humblelab.com/library/kubecon-demo-app-dark
---
apiVersion: v1
kind: Service
metadata:
  name:  kubecon-minilab-app-dark-svc
  labels:
    app: kubecon-minilab-app-dark-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: kubecon-minilab-app-dark
