contour-route-1.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic
spec:
  virtualhost:
    fqdn: REPLACEME
  routes:
  - services:
    - name: kubecon-minilab-app-svc
      port: 80
    conditions:
      - prefix: /
