contour-route-3.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic
spec:
  virtualhost:
    fqdn: REPLACEME
  includes:
  - name: kubecon
    namespace: default
    conditions:
    - prefix: /kubecon
  routes:
  - services:
    - name: kubecon-minilab-app-svc
      port: 80
    conditions:
      - prefix: /
  - services:
    - name: kubecon-minilab-ll-svc
      port: 80
    conditions:
      - prefix: /minilabs
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kubecon
  namespace: default
spec:
  routes:
    - conditions:
      - prefix: /
      services:
        - name: kubecon-minilab-kc-svc
          port: 80
